# LS

./: .env.dev  .env.prod  README.md  deploy.sh  docker-compose.db-and-redis.dev.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  restart_db.bat  restart_db.sh  start-local-db-and-redis.bat  start-local-db-and-redis.sh
backend/server/: .prettierrc  Cargo.toml  Dockerfile  package-lock.json  package.json  tsconfig.json
backend/server/migrations/~/: up.sql
backend/server/src/: db.rs  env.ts  index.ts  main.rs
backend/server/src/api/: guardians.rs  mod.rs  typings.rs  utils.rs
backend/server/src/api/auth/: handlers.rs
backend/server/src/api/map/: handlers.rs
backend/server/src/api/map copy/: handlers.rs
backend/server/src/api/repository/: handlers.rs
backend/server/src/constants/: constants.ts  errors.ts
backend/server/src/database/: index.ts  pg.ts  redis.ts
backend/server/src/errors/: error_handler.rs
backend/server/src/git/: git.ts  index.ts
backend/server/src/git_manager/: git_manager.rs
backend/server/src/handlers/: auth.ts  groups.ts  index.ts  repositories.ts
backend/server/src/middleware/: cors.rs
backend/server/src/models/: group.ts  index.ts  mod.rs  repository.ts  schema.rs  user.ts
backend/server/src/redis_utils/: utils.rs
backend/server/src/routes/: auth.ts  constants.ts  groups.ts  index.ts  repositories.ts  users.ts
backend/server/src/types/: index.ts  server.ts
backend/server/src/utils/: access.ts  index.ts  middlewares.ts  paths.ts  server-utils.ts  server_utils.ts  utils.rs
(+403 files in other folders)
