[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets", "json"] }
redis = "0.21.3"
serde = "1.0.130"
lazy_static = "1.4.0"
r2d2 = "0.8.9"
r2d2_postgres = "0.16.0"
validator = { version = "0.12", features = ["derive"] }
chrono = "0.4.19"
git2 = "0.13.23"
